--- a/src/pages/MoviesPage/MoviesPage.module.css
+++ b/src/pages/MoviesPage/MoviesPage.module.css
@@ -1,11 +1,10 @@
 .container {
   max-width: 800px;
   margin: 0 auto;
-  padding: 20px;
 }
 
 .title {
-  font-size: 24px;
+  font-size: 16px;
   font-weight: bold;
   margin-bottom: 20px;
 }
@@ -17,10 +16,18 @@
 
 .input {
   flex: 1;
+  background-color: #fff;
+  color: black;
   padding: 10px;
   font-size: 16px;
+  max-width: 300px;
   border: 1px solid #ccc;
   border-radius: 4px 0 0 4px;
+}
+
+.input:focus {
+  outline: none;
+  border-color: #007bff;
 }
 
 .button {
