--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,14 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(
+      rgba(200, 166, 166, 0.7),
+      rgba(199, 177, 177, 0.7)
+    ),
+    url("./images/background.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 h1,
