--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
@@ -5,7 +5,18 @@
 }
 
 .backButton {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  padding: 5px 10px;
+  background-color: #f0f0f0;
+  color: #333;
+  border: none;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.backButton:hover {
+  background-color: #c6a9a9;
 }
 
 .movieInfo {
@@ -13,9 +24,39 @@
   margin-bottom: 20px;
 }
 
-.poster {
+.posterWrapper {
+  position: relative;
   width: 200px;
+  height: 300px;
   margin-right: 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.poster {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.3s ease;
+}
+
+/* .poster:hover {
+  transform: scale(1.05);
+} */
+
+.noPosterPlaceholder {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f0f0f0;
+  color: #888;
+  font-size: 16px;
 }
 
 .info {
@@ -61,6 +102,28 @@
   margin-top: 40px;
 }
 
-.additionalInfo ul {
+.buttonContainer {
+  display: flex;
+  gap: 10px;
   margin-bottom: 20px;
+}
+
+.button {
+  padding: 5px 10px;
+  width: 55px;
+  text-align: center;
+  background-color: #f0f0f0;
+  color: #333;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.button:hover {
+  background-color: #e0e0e0;
+}
+
+.activeButton {
+  background-color: #333;
+  color: #fff;
 }
